# osu-microbenchmarks-sessions

./: .gitignore  CHANGES  README  configure.ac
mpi/collective/: Makefile.am  osu_alltoallv.c  osu_barrier.c
mpi/collective/.deps/: osu_allgather.Po  osu_allgatherv.Po  osu_allreduce.Po  osu_alltoall.Po  osu_alltoallv.Po  osu_barrier.Po  osu_bcast.Po  osu_gather.Po  osu_gatherv.Po  osu_iallgather.Po  osu_iallgatherv.Po  osu_iallreduce.Po  osu_ialltoall.Po  osu_ialltoallv.Po  osu_ialltoallw.Po  osu_ibarrier.Po  osu_ibcast.Po  osu_igather.Po  osu_igatherv.Po  osu_ireduce.Po  osu_iscatter.Po  osu_iscatterv.Po  osu_reduce.Po  osu_reduce_scatter.Po  osu_scatter.Po  osu_scatterv.Po
mpi/one-sided/: Makefile.am  osu_get_bw.c
mpi/one-sided/.deps/: osu_acc_latency.Po  osu_cas_latency.Po  osu_fop_latency.Po  osu_get_acc_latency.Po  osu_get_bw.Po  osu_get_latency.Po  osu_put_bibw.Po  osu_put_bw.Po  osu_put_latency.Po
mpi/pt2pt/: Makefile.am  osu_bibw_sessions.c  osu_bw_mt.c  osu_bw_sessions.c  osu_latency_mt.c  osu_latency_sessions.c  osu_mbw_mr_sessions.c
mpi/startup/: Makefile.am  osu_comm_dup.c  osu_sessions_dup.c  osu_sessions_init.c
mpi/startup/.deps/: osu_comm_dup.Po  osu_hello.Po  osu_init.Po  osu_sessions_dup.Po  osu_sessions_init.Po
openshmem/: Makefile.am  osu_oshm_get_mr_nb.c  osu_oshm_put_mr.c  osu_oshm_put_mr_nb.c
upc/: Makefile.am
upcxx/: Makefile.am
util/: osu_util_pgas.h
